--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -19,6 +19,12 @@ python-dotenv>=1.0.0
 langchain>=0.1.0
 langchain-community>=0.0.10
 langchain-google-genai>=0.0.6
+langchain-text-splitters>=0.0.1
 pypdf>=3.17.0
 google-generativeai>=0.3.0
+
+# Multi-format file support
+python-pptx>=0.6.21
+python-docx>=1.1.0
+
 
